PR review fixes: remove settings saved user message, add links, clean header spacing.

--- a/assets/css/udoit4-theme.css
+++ b/assets/css/udoit4-theme.css
@@ -2,15 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
-/* @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
-@font-face {
-  font-family: 'Lexend';
-  src: url('./lexendgx.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-}
 
 @layer udoit-base-theme, udoit-layout, udoit-component, udoit-modifier;
 
