--- a/assets/js/Components/Header.css
+++ b/assets/js/Components/Header.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 2rem;
 
     .skip-link {
       position: absolute;
@@ -87,7 +88,7 @@
         list-style-type: none;
         width: fit-content;
         overflow: hidden;
-        margin: 0 0 0 1rem;
+        margin: 0 0 0 0;
         padding: 0px 3px;
         gap: .25em;
         z-index: 100;
